Added new field node icon and now get nodes from user only returns OPEN, LOCKED and COMPLETED nodes